Changes since version 2.0.0
---------------------------

- Added ice_ping optimization in the Freeze evictor: for operation
  "ice_ping", the object is not loaded in the cache, Freeze only
  checks if the object is in the cache or the database.

- Fixed a slice2cpp failure when the --output-dir option specified a
  directory containing backslashes.

- Changed the signature of Ice::Service::main() and Ice::Service::run()
  to accept a reference to argc (int & argc) rather than passing argc
  by value (int argc). This is to ensure that, if Ice::initialize() or
  Ice::Service::initializeCommunicator() rewrites argv, argc reflects
  the number of elements of the rewritten argument vector.

- Fixed an encoding bug in IceSSL.

- Fixed incorrect logging message if no more endpoints are available
  for retry.

- Added setDefaultContext() and getDefaultContext() to the
  Ice::Communicator interface. This allows a default context to be
  established on a communicator-wide basis. See section 29.8.3 in the
  doc.

  Added ice_defaultContext to Ice::ObjectProxy. This creates a new
  proxy that uses the default context established on the communicator.

- Fixed a rare proxy marshaling bug that could cause the receiver to
  encounter an UnmarshalOutOfBoundsException.

- Overloaded the checkedCast member function of the generated Prx
  classes to allow a trailing argument of type ::Ice::Context. This
  makes it possible to do stateful things that require a context in a
  servant locator's activate() method.

- Added catalogs for Freeze: each database environment used by Freeze
  now contains a special dictionary (named __catalog) that keeps track
  of all evictor and dictionary databases in this environment.

- Fixed a bug in slice2cs and slice2vb: incorrect code was generated
  if an interface was derived from a base interface in a different
  module and if the base interface contained an AMD operation.

- Changed IceUtil::GCShared to derive from IceUtil::Shared.