@@ -1,6 +1,8 @@
 Changes since version 2.0.0
 ---------------------------
 
+- Fixed a bug in IceSSL when multiple communicators are used.
+
 - Added ice_ping optimization in the Freeze evictor: for operation
   "ice_ping", the object is not loaded in the cache, Freeze only
   checks if the object is in the cache or the database.
